Added static files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,1 +1,18 @@
-<p>Hello, world!</p>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/default}">
+<head>
+    <title>Wyniki</title>
+</head>
+<body>
+<div layout:fragment="content">
+    <div class="container">
+    <p>In convallis ligula dui, a congue odio porta id. Cras ac scelerisque urna, a efficitur justo. Phasellus neque nisl, volutpat id sodales eget, vulputate in nisi. Praesent fermentum sagittis risus, et consequat est congue eu. Integer quis leo viverra, feugiat tellus at, pulvinar neque. Proin molestie est mi, quis fringilla nisl luctus sit amet. Sed malesuada volutpat mattis. Morbi egestas neque nec metus finibus, sed dapibus risus lacinia. Duis quis leo vitae orci congue blandit. Duis tincidunt congue magna, ac gravida odio sollicitudin sed. Sed tempus faucibus massa, at venenatis mi consequat et.</p>
+    <p>Vestibulum dignissim sagittis efficitur. Vestibulum ac lorem feugiat, finibus purus ut, scelerisque tortor. Vestibulum vitae risus at eros tincidunt fringilla ut at augue. Phasellus cursus nisi dictum luctus bibendum. Integer sem ipsum, convallis non fringilla in, mattis non diam. Quisque suscipit, enim sed tempor placerat, turpis tortor ultricies augue, sed fringilla velit mi sit amet mauris. Donec eu metus ac sem eleifend tincidunt vitae eget tellus. Sed sit amet semper sapien. Ut semper enim a orci efficitur lacinia. Fusce vitae tempor lorem. Fusce eget fringilla ipsum, a mattis tellus. Proin venenatis arcu in quam malesuada sagittis. Suspendisse mi felis, maximus a volutpat eu, maximus a leo. Cras hendrerit, nisi vitae porta aliquam, augue arcu lobortis orci, quis convallis ligula sapien sed ante. Aliquam volutpat faucibus maximus.</p>
+    <p>Suspendisse condimentum velit quis ex pulvinar aliquet. Nullam eget enim eu felis tristique aliquet. Aliquam eu massa tristique, fringilla quam et, auctor ante. Integer commodo tincidunt purus eu accumsan. Nullam posuere nisl justo, vitae suscipit sapien elementum quis. Ut scelerisque ullamcorper est, eu dignissim augue efficitur a. Sed mattis dictum dui non suscipit. Nam non urna eget massa efficitur porttitor. In convallis sapien ante, eget convallis dui vulputate eu. In hac habitasse platea dictumst. Ut sit amet leo et nibh eleifend pharetra. Sed porttitor viverra fringilla. </p>
+    <p>Pellentesque eget eros a orci consectetur semper. Sed enim dolor, ultrices id vehicula tincidunt, venenatis ac quam. Morbi non diam rhoncus, rutrum neque in, posuere nibh. Nam ut dolor efficitur, pellentesque felis quis, efficitur magna. In sed ultricies metus, at faucibus velit. Aliquam at ornare ligula. Morbi augue erat, cursus a enim vel, lacinia fringilla lectus. Fusce gravida ac libero eget pharetra. Aliquam at tellus non ante lobortis pretium. Nunc pretium ex vitae diam lobortis, id ultrices mi congue. Integer eu egestas velit, a pellentesque orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    <p>Vivamus ut interdum diam. Nulla quis neque quam. Cras sodales libero felis, et iaculis lectus tempor sed. Aliquam eget fermentum urna, sed luctus odio. Nunc et faucibus velit, auctor feugiat nisl. Aliquam ac est nisi. Sed erat augue, tempor imperdiet diam in, feugiat dictum lectus. Sed quis blandit mi. Nullam ut condimentum massa. Phasellus nec imperdiet odio. Vivamus massa enim, sodales id ex vitae, viverra blandit quam. Nam tristique id dui sit amet fermentum. Nulla non quam a lacus varius aliquam in at ante. Etiam posuere elementum turpis, eu imperdiet magna placerat a.</p>
+    </div>
+</div>
+</body>
+</html>
