--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -3,14 +3,38 @@
 <body>
 <div th:fragment="header">
     <div class="jumbotron text-center">
-        <h1>Kalkulator krajowej podróży służbowej</h1>
-        <p class="lead">Kalkulator obliczający wartość kosztów delegacji pracownika</p>
+        <h1>Wypożyczalnia samochodowa Carrental</h1>
+        <p class="lead">Wypożycz sobie samochód już dziś!</p>
     </div>
 </div>
 
 <div th:fragment="footer">
     <div class="text-center page-footer">
-        <p class="lead">Autorzy strony: Maksymilian Zytkiewicz & Łukasz Źróbek</p>
+        <div class="container">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col">
+                    <h3>Pomoc i informacje</h3>
+                    <ul class="undecorated text-left">
+                        <li><a href="">O nas</a></li>
+                        <li><a href="">Kontakt</a></li>
+                        <li><a href="">Pomoc</a></li>
+                        <li><a href="">Ochrona prywatności</a></li>
+                        <li><a href="">Warunki umowy</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Odsyłacze</h3>
+                    <ul class="undecorated text-left">
+                        <li><a href="">Najczęściej wyszukiwane kraje</a></li>
+                        <li><a href="">Najczęściej wyszukiwane miasta</a></li>
+                        <li><a href="">Wszystkie kraje</a></li>
+                        <li><a href="">Preferencje dotyczące e-maili</a></li>
+                    </ul>
+                </div>
+                <div class="col"></div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
