--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,36 +1,40 @@
 html, body {
-  height: 100%;
+    height: 100%;
 }
 
 #wrap {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 #main {
-  overflow:auto;
-  padding-bottom:150px; /* this needs to be bigger than footer height*/
+    overflow:auto;
+    padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
 
 .footer {
-  position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 150px;
-  clear:both;
-  padding-top:20px;
+    position: relative;
+    margin-top: -150px; /* negative value of footer height */
+    height: 150px;
+    clear:both;
+    padding-top:20px;
 }
 
 .page-footer {
-  background: #4a5254;
-  padding: 20px;
+    background: #303030;
+    padding: 20px;
 }
 
 .undecorated {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .jumbotron {
     background-image: url("../images/header.jpg");
-    background-size: cover;
+    margin-bottom: 0;
+}
+
+.container {
+    padding: 50px;
 }
