--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -6,6 +6,34 @@
         <h1>Wypożyczalnia samochodowa Carrental</h1>
         <p class="lead">Wypożycz sobie samochód już dziś!</p>
     </div>
+
+
+    <div class="bs-component">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Carrental</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+                    aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" style="">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+
+            <div class="navbar-collapse collapse" id="navbar" role="navigation">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Strona główna<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Wypożyczalnia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kontakt</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">O nas</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 </div>
 
 <div th:fragment="footer">
