--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default}">
 <head>
-    <title>Wyniki</title>
+    <title>Wszystkie kraje</title>
 </head>
 <body>
 <div layout:fragment="content">
