--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -3,12 +3,64 @@
       layout:decorate="~{layout/default}">
 <head>
     <title>Wszystkie kraje</title>
+    <style>
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 <div layout:fragment="content">
     <div class="container">
         <h1>Wszystkie kraje</h1>
         <p>Pokazane punkty na mapie wskazują lokalizacje wszystkich dostępnych samochodów.</p>
+
+        <div id="map"></div>
+
+        <script>
+        var infoWindow, map, marker;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: 0, lng: 0},
+                zoom: 6
+            });
+            infoWindow = new google.maps.InfoWindow;
+
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var pos = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+
+                    marker = new google.maps.Marker({
+                        position: pos,
+                        map: map,
+                        draggable: true
+                    });
+
+
+                    google.maps.event.addListener(marker, 'dragend', function (evt) {
+                        console.log(evt.latLng.lat() + ", " + evt.latLng.lng());
+                    });
+
+
+                    infoWindow.setPosition(pos);
+                    infoWindow.setContent('Location found.');
+                    infoWindow.open(map);
+                    map.setCenter(pos);
+                }, function() {
+                    handleLocationError(true, infoWindow, map.getCenter());
+                });
+            } else {
+                handleLocationError(false, infoWindow, map.getCenter());
+            }
+        }
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCofRiq5oziA0Xx43NobVeg7LX5Hbym9sA&callback=initMap">
+    </script>
     </div>
 </div>
 </body>
