Added Login page

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,9 @@
+@media (min-width: 1200px) {
+    .container {
+        width: 900px;
+    }
+}
+
 html, body {
     height: 100%;
 }
@@ -37,6 +43,7 @@ html, body {
 
 .container {
     padding: 50px;
+    maxwidth
 }
 
 .gm-style-iw {
