--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -21,7 +21,10 @@
                         <a class="nav-link" th:href="@{~/}">Strona główna</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Wypożyczalnia</a>
+                        <a class="nav-link" href="#">Oferty</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Złóż ofertę</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{~/map}">Lokalizacje</a>
@@ -51,15 +54,6 @@
                         <li><a href="">Pomoc</a></li>
                         <li><a href="">Ochrona prywatności</a></li>
                         <li><a href="">Warunki umowy</a></li>
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3>Odsyłacze</h3>
-                    <ul class="undecorated text-left">
-                        <li><a href="">Najczęściej wyszukiwane kraje</a></li>
-                        <li><a href="">Najczęściej wyszukiwane miasta</a></li>
-                        <li><a th:href="@{~/map}">Wszystkie kraje</a></li>
-                        <li><a href="">Preferencje dotyczące e-maili</a></li>
                     </ul>
                 </div>
                 <div class="col"></div>
