Added custom Email validator

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h2>Rejestracja</h2>
 
-        <form th:action="@{/}" th:object="${form}" method="post">
+        <form th:action="@{/register}" th:object="${form}" method="post">
             <div class="form-group row">
                 <label for="firstNameInput" class="col-3 col-form-label">Imię</label>
                 <div class="col-5">
