--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,17 +9,18 @@
     <div class="container">
         <h2>Zaloguj się</h2>
 
-        <form th:action="@{/login}" th:object="${loginForm}" method="post">
+        <form th:action="@{/login}" th:object="${form}" method="post">
+            <div th:if="${loginError}" class="alert alert-danger">Nieprawidłowy e-mail lub hasło</div>
             <div class="form-group row">
                 <label for="emailInput" class="col-3 col-form-label">E-mail</label>
                 <div class="col-5">
-                    <input type="email" class="form-control" id="emailInput" placeholder="E-mail">
+                    <input type="email" class="form-control" id="emailInput" th:field="*{email}" placeholder="E-mail">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="passwordInput" class="col-3 col-form-label">Password</label>
+                <label for="passwordInput" class="col-3 col-form-label">Hasło</label>
                 <div class="col-5">
-                    <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                    <input type="password" class="form-control" id="passwordInput" th:field="*{password}" placeholder="Hasło">
                 </div>
             </div>
             <button class="btn btn-primary" type="submit">Zaloguj się</button>
