--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -36,6 +36,7 @@
                         <a class="nav-link" href="#">O nas</a>
                     </li>
                 </ul>
+                <a class="btn btn-primary pull-right" th:href="@{~/login}">Zaloguj się</a>
             </div>
         </nav>
     </div>
