--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -19,13 +19,12 @@
         <div id="map"></div>
 
         <script>
-        var infoWindow, map, marker;
+        var map, marker;
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
                 center: {lat: 0, lng: 0},
                 zoom: 6
             });
-            infoWindow = new google.maps.InfoWindow;
 
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(function(position) {
@@ -46,9 +45,6 @@
                     });
 
 
-                    infoWindow.setPosition(pos);
-                    infoWindow.setContent('Location found.');
-                    infoWindow.open(map);
                     map.setCenter(pos);
                 }, function() {
                     handleLocationError(true, infoWindow, map.getCenter());
@@ -58,7 +54,7 @@
             }
         }
     </script>
-    <script async defer
+    <script th:inline="javascript" async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCofRiq5oziA0Xx43NobVeg7LX5Hbym9sA&callback=initMap">
     </script>
     </div>
