--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -44,7 +44,7 @@
                         <a class="btn btn-secondary" th:href="@{~/signup}">Zarejestruj się</a>
                     </div>
                     <span sec:authorize="isAuthenticated()">
-                        Zalogowany jako <span sec:authentication="name"></span>
+                        Zalogowany jako <a th:href="@{~/user/account}" sec:authentication="name"></a>
                     </span>
                     <span class="col"></span>
                 </div>
