--- a/src/main/resources/templates/useraccount.html
+++ b/src/main/resources/templates/useraccount.html
@@ -2,18 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/default}">
 <head>
-    <title>Strona główna</title>
+    <title>Ustawienia konta</title>
 </head>
 <body>
 <div layout:fragment="content">
     <div class="container">
-        <h2>Profil użytkownika</h2>
+        <h2>Konto użytkownika</h2>
 
-        <div th:if="${currentUser}">
-            <p>Jesteś tym użytkownikiem</p>
-        </div>
-
-        <div th:text="${user.email}"></div>
+        <h3>Złożone oferty</h3>
+        <p>Brak ofert</p>
     </div>
 </div>
 </body>
