Added hybrid drive

--- a/src/main/resources/templates/createcar.html
+++ b/src/main/resources/templates/createcar.html
@@ -86,6 +86,10 @@
                     <input type="radio" id="drive3" name="drive" class="custom-control-input" value="2" th:field="*{driveType}">
                     <label class="custom-control-label" for="drive3">gaz</label>
                 </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" id="drive4" name="drive" class="custom-control-input" value="3" th:field="*{driveType}">
+                    <label class="custom-control-label" for="drive4">hybrydowy</label>
+                </div>
             </div>
 
             <hr>
